the bug resolved